services/self-service/src/main/resources/webapp/src/client/app/components/multi-select-dropdown/multi-select-dropdown.component.css
.dropdown-multiselect {
  width: 100%;
}

.dropdown-multiselect button {
  min-width: 100%;
  text-align: left;
  background: #fff;
  border: 1px solid #cad2da;
  font-size: 14px;
}
.dropdown-multiselect button span {
  color: #999;
}
.dropdown-multiselect button .selected-items {
  color: #4eaf3e;
}
.dropdown-multiselect .caret-btn {
  position: absolute;
  top: 0;
  right: 0;
  width: 36px;
  height: 100%;
  text-align: center;
  padding: 5px;
  -webkit-appearance: none;
  -moz-appearance: none;
  background: #F6FAFE;
  border-left: 1px solid #ccc;
  color: #64a5dc;
}

.dropdown-multiselect .dropdown-menu {
  display: block;
  width: 100%;
  max-height: 250px;
  left: 0;
  padding: 0;
  margin: 0;
  overflow-y: auto;
  overflow-x: hidden;
}

.dropdown-multiselect .dropdown-menu li {
  padding: 0;
  margin: 0;
}
.dropdown-multiselect.statuses .dropdown-menu li a,
.dropdown-multiselect.resources .dropdown-menu li a{
  text-transform: capitalize;
}
.dropdown-multiselect .dropdown-menu a {
  padding: 10px;
  padding-left: 35px;
  position: relative;
  font-weight: 300;
}
.dropdown-multiselect .dropdown-menu .filter-actions {
  border-bottom: 1px solid #ececec;
  width: 50%;
  float: left;
  cursor: pointer;
}
.dropdown-multiselect .dropdown-menu .filter-actions a {
  padding-left: 14px;
  color: #35afd5;
}
.dropdown-multiselect .dropdown-menu .filter-actions .select_all:hover {
  color: #49af38;
  background: #fbfbf4;
}
.dropdown-multiselect .dropdown-menu .filter-actions .deselect_all:hover {
  color: #f1696e;
  background: #fbfbf4;
}

.dropdown-multiselect .dropdown-menu a span {
  position: absolute;
  top: 14px;
  left: 14px;
  color: #35afd5;
}

.dropdown-multiselect.btn-group.open .dropdown-toggle {
  box-shadow: none;
}

::-webkit-scrollbar {
  width: 8px;
}

::-webkit-scrollbar-track {
  -webkit-box-shadow: none;
  border-radius: 5px;
  background-color: #f1ecec;
}

::-webkit-scrollbar-thumb {
  -webkit-box-shadow: inset 1px 1px 6px #9a9393;
  background-color: #f9fafb;
  border-radius: 5px;
}

